make dev - fixed

--- a/package.json
+++ b/package.json
@@ -47,12 +47,13 @@
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.7",
     "@types/node": "^22.5.5",
+    "@types/node-fetch": "^2.6.13",
     "@types/request-promise-native": "~1.0.15",
+    "@types/whatwg-url": "^13.0.0",
     "@typescript-eslint/parser": "~5.45",
     "eslint-plugin-n8n-nodes-base": "^1.11.0",
     "gulp": "^4.0.2",
     "jest": "^29.7.0",
-    "n8n-core": "*",
     "n8n-workflow": "*",
     "prettier": "^2.7.1",
     "ts-jest": "^29.2.5",
