--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
 		"strict": true,
 		"module": "commonjs",
 		"moduleResolution": "node",
-		"target": "es2019",
-		"lib": ["es2019", "es2020", "es2022.error"],
+		"target": "ES2020",
+		"lib": ["ES2020", "ES2022.Error"],
 		"removeComments": true,
 		"useUnknownInCatchVariables": false,
 		"forceConsistentCasingInFileNames": true,
@@ -14,6 +14,7 @@
 		"strictNullChecks": true,
 		"preserveConstEnums": true,
 		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
 		"resolveJsonModule": true,
 		"incremental": true,
 		"declaration": true,
